--- a/sample2/style.css
+++ b/sample2/style.css
@@ -1,1 +1,23 @@
 @charset "utf-8";
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #FFFFFF;
+    color: #2B2A27;
+}
+
+/*-------------------- main -----------------------*/
+
+.main-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.main-visual {
+    width: 50%;
+}
+
+.main-visual__img {
+    width: 100%;
+    height: auto;
+}
