--- a/sample2/style.css
+++ b/sample2/style.css
@@ -6,6 +6,15 @@ body {
     color: #2B2A27;
 }
 
+.detail__title,.ingredients__title,.how-to-make__title {
+    font-weight: bold;
+    margin-bottom: 32px;
+}
+
+.detail__text,.ingredients__item,.how-to-make__item {
+    font-size: 16px;
+}
+
 /*-------------------- main -----------------------*/
 
 .main-container {
@@ -21,4 +30,55 @@ body {
     width: 100%;
     height: 700px;
     object-fit: cover;
+}
+
+
+/*-------------------- content -----------------------*/
+
+.content-wrapper {
+    width: 50%;
+    padding: 45px 60px 0;
+}
+
+.detail {
+    margin-bottom: 48px;
+}
+
+.detail__title {
+    font-size: 28px;
+}
+
+.ingredients {
+    margin-bottom: 43px;
+}
+
+.ingredients__title {
+    padding-bottom: 9px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #CCCCCC;
+}
+
+.ingredients__item {
+    padding: 9px 0;
+    border-bottom: 1px solid #CCCCCC;
+}
+
+.ingredients__quantity {
+    float: right;
+}
+
+.how-to-make__title {
+    padding-bottom: 9px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #CCCCCC;
+}
+
+.how-to-make__list {
+    list-style: decimal;
+    list-style-position: inside;
+}
+
+.how-to-make__item {
+    padding: 9px 0;
+    border-bottom: 1px solid #CCCCCC;
 }
